--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <!-- Include Custom stylesheet -->
-  <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="style.css" />
   <link rel="manifest" href="./manifest.json">
 </head>
 
@@ -160,8 +160,8 @@
   <script src="https://unpkg.com/dexie@latest/dist/dexie.js"></script>
 
   <!-- Include custom file -->
-  <script src="../js/main.js" type="module"></script>
-  <script src="./script.js"></script>
+  <script src="main.js" type="module"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
