--- a/cart_items.html
+++ b/cart_items.html
@@ -21,7 +21,7 @@
     <header id="header">
       <div class="removemsg text-center w-100 bg-danger p-2 text-light">Item remove successfully</div>
       <nav class="navbar navbar-expand-lg navbar-white bg-white">
-        <a class="navbar-brand" href="./index.html">
+        <a class="navbar-brand" href="#">
           <h3 class="px-5">
             <i class="fas fa-utensils"></i> Tus compras (PWA indexedDB)
           </h3>
