--- a/cart_items.html
+++ b/cart_items.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <!-- Include Custom stylesheet -->
-  <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -21,7 +21,7 @@
     <header id="header">
       <div class="removemsg text-center w-100 bg-danger p-2 text-light">Item remove successfully</div>
       <nav class="navbar navbar-expand-lg navbar-white bg-white">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <h3 class="px-5">
             <i class="fas fa-utensils"></i> Tus compras (PWA indexedDB)
           </h3>
@@ -93,7 +93,7 @@
   <script src="https://unpkg.com/dexie@latest/dist/dexie.js"></script>
 
   <!-- Include custom file -->
-  <script src="../js/cart.js" type="module"></script>
+  <script src="cart.js" type="module"></script>
 </body>
 
 </html>
