--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
   <header id="header">
-    <nav class="navbar navbar-expand-lg navbar-white bg-white">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">
         <h3 class="px-5">
           <i class="fas fa-utensils"></i> Tus compras (PWA indexedDB)
