--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">
         <h3 class="px-5">
-          <i class="fas fa-utensils"></i> Tus compras (PWA indexedDB)
+          <i class="fas fa-utensils"></i> Tus compras(indexedDB)
           
         </h3>
       </a>
