--- a/cart_items.html
+++ b/cart_items.html
@@ -22,9 +22,9 @@
       <div class="removemsg text-center w-100 bg-danger p-2 text-light">Item remove successfully</div>
       <nav class="navbar navbar-expand-lg navbar-white bg-white">
         <a class="navbar-brand" href="index.html">
-          <h5 class="px-5">
-            <i class="fas fa-utensils"></i> Tus compras(indexedDB)
-          </h5>
+          <h3 class="px-5">
+            <i class="fas fa-utensils"></i> IndexedDB
+          </h3>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
